--- a/.github/workflows/python_tests.yaml
+++ b/.github/workflows/python_tests.yaml
@@ -3,8 +3,61 @@ name: Python tests
 on: [pull_request]
 
 jobs:
+  build-docker-images:
+    name: Build Docker test images
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version:
+          - 3.7
+          - 3.8
+          - 3.9
+
+    steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Generate image metadata
+        id: metadata
+        uses: docker/metadata-action@v3
+        with:
+          images: prefecthq/prefect
+          tags: |
+            type=pep440,pattern={{version}}.dev
+            type=sha
+          flavor: |
+            latest=false
+            suffix=-python${{ matrix.python-version }}
+
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Build image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          build-args:
+            PYTHON_VERSION=${{ matrix.python-version }}
+          tags: ${{ steps.metadata.outputs.tags }}
+          labels: ${{ steps.metadata.outputs.labels }}
+          outputs: type=docker,dest=/tmp/image.tar
+
+      - name: Test docker image
+        run: |
+          docker load --input /tmp/image.tar
+          docker run --rm prefecthq/prefect:sha-${GITHUB_SHA::7}-python${{ matrix.python-version }} prefect version
+
+      - name: Upload image artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: image-${{ github.sha }}-${{ matrix.python-version }}
+          path: /tmp/image.tar
+
   run-tests-sqlite:
     name: SQLite
+    needs: [build-docker-images]
 
     strategy:
       matrix:
@@ -12,7 +65,7 @@ jobs:
           - 3.7
           - 3.8
           - 3.9
-        os: 
+        os:
           - ubuntu-latest
           # - windows-latest
       fail-fast: false
@@ -35,17 +88,28 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install --upgrade --upgrade-strategy eager -e .[dev]
-          
+
+      - name: Download Docker image artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: image-${{ github.sha }}-${{ matrix.python-version }}
+          path: /tmp
+
+      - name: Load Docker image
+        run:
+          docker load /tmp/image.tar
+
       - name: Run tests
-        env: 
+        env:
           PREFECT_ORION_DATABASE_CONNECTION_URL: "sqlite+aiosqlite:///./orion-tests.db"
         run: |
           pytest tests --all-services -vv
 
-  
+
 
   run-tests-postgres:
     name: Postgres
+    needs: [build-docker-images]
 
     strategy:
       matrix:
@@ -53,7 +117,7 @@ jobs:
           - 3.7
           - 3.8
           - 3.9
-        os: 
+        os:
           - ubuntu-latest
           # windows backend doesn't support containers
           # - windows-latest
@@ -89,8 +153,18 @@ jobs:
           python -m pip install --upgrade pip
           pip install --upgrade --upgrade-strategy eager -e .[dev]
 
+      - name: Download Docker image artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: image-${{ github.sha }}-${{ matrix.python-version }}
+          path: /tmp
+
+      - name: Load Docker image
+        run:
+          docker load /tmp/image.tar
+
       - name: Run tests
-        env: 
+        env:
           PREFECT_ORION_DATABASE_CONNECTION_URL: 'postgresql+asyncpg://prefect:prefect@localhost/orion'
         run: |
           pytest tests --all-services -vv
@@ -98,6 +172,7 @@ jobs:
 
   run-tests-lower-bounds:
     name: Lower bound requirements
+    needs: [build-docker-images]
     # We cannot test on Ubuntu LTS because the sqlite version is not new enough
     runs-on: ubuntu-latest
 
@@ -123,6 +198,16 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -e .[dev]
+
+      - name: Download Docker image artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: image-${{ github.sha }}-${{ matrix.python-version }}
+          path: /tmp
+
+      - name: Load Docker image
+        run:
+          docker load /tmp/image.tar
 
       - name: Run tests
         env:
