--- a/.github/workflows/python_tests.yaml
+++ b/.github/workflows/python_tests.yaml
@@ -56,7 +56,7 @@ jobs:
           path: /tmp/image.tar
 
   run-tests-sqlite:
-    name: SQLite
+    name: Test with SQLite
     needs: [build-test-docker-images]
 
     strategy:
@@ -108,7 +108,7 @@ jobs:
 
 
   run-tests-postgres:
-    name: Postgres
+    name: Test with Postgres
     needs: [build-test-docker-images]
 
     strategy:
@@ -171,7 +171,7 @@ jobs:
 
 
   run-tests-lower-bounds:
-    name: Lower bound requirements
+    name: Test with lower requirements
     needs: [build-test-docker-images]
     # We cannot test on Ubuntu LTS because the sqlite version is not new enough
     runs-on: ubuntu-latest
