--- a/.github/workflows/python_tests.yaml
+++ b/.github/workflows/python_tests.yaml
@@ -17,18 +17,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Generate image metadata
-        id: metadata
-        uses: docker/metadata-action@v3
-        with:
-          images: prefecthq/prefect
-          tags: |
-            type=pep440,pattern={{version}}.dev
-            type=sha
-          flavor: |
-            latest=false
-            suffix=-python${{ matrix.python-version }}
-
       - name: Checkout
         uses: actions/checkout@v2
         with:
@@ -40,14 +28,13 @@ jobs:
           context: .
           build-args:
             PYTHON_VERSION=${{ matrix.python-version }}
-          tags: ${{ steps.metadata.outputs.tags }}
-          labels: ${{ steps.metadata.outputs.labels }}
+          tags: dev-python${{ matrix.python-version }}
           outputs: type=docker,dest=/tmp/image.tar
 
       - name: Test docker image
         run: |
           docker load --input /tmp/image.tar
-          docker run --rm prefecthq/prefect:sha-${GITHUB_SHA::7}-python${{ matrix.python-version }} prefect version
+          docker run --rm prefecthq/prefect:dev-python${{ matrix.python-version }} prefect version
 
       - name: Upload image artifact
         uses: actions/upload-artifact@v2
