Add missing `--input` to docker load

--- a/.github/workflows/python_tests.yaml
+++ b/.github/workflows/python_tests.yaml
@@ -151,7 +151,7 @@ jobs:
 
       - name: Load Docker image
         run:
-          docker load /tmp/image.tar
+          docker load --input /tmp/image.tar
 
       - name: Run tests
         env:
@@ -197,7 +197,7 @@ jobs:
 
       - name: Load Docker image
         run:
-          docker load /tmp/image.tar
+          docker load --input /tmp/image.tar
 
       - name: Run tests
         env:
