--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -111,7 +111,7 @@ jobs:
         uses: actions/upload-artifact@v2
         # Images are built but not published unless this commit is for a tagged release
         with:
-          name: image-${{ github.sha }}-${{ matrix.python-version }}
+          name: release-image-${{ github.sha }}-${{ matrix.python-version }}
           path: /tmp/image.tar
 
   publish-docs:
@@ -237,19 +237,19 @@ jobs:
       - name: Download image artifacts for Python 3.7
         uses: actions/download-artifact@v2
         with:
-          name: image-${{ github.sha }}-3.7
+          name: release-image-${{ github.sha }}-3.7
           path: /tmp/3.7/
 
       - name: Download image artifacts for Python 3.8
         uses: actions/download-artifact@v2
         with:
-          name: image-${{ github.sha }}-3.8
+          name: release-image-${{ github.sha }}-3.8
           path: /tmp/3.8/
 
       - name: Download image artifacts for Python 3.9
         uses: actions/download-artifact@v2
         with:
-          name: image-${{ github.sha }}-3.9
+          name: release-image-${{ github.sha }}-3.9
           path: /tmp/3.9/
 
       - name: Load images
