--- a/orion-ui/packages/orion-design/package.json
+++ b/orion-ui/packages/orion-design/package.json
@@ -3,7 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "build": "vite build & vue-tsc --emitDeclarationOnly --out dist/index.d.ts"
+        "build": "vite build & vue-tsc",
+        "postbuild": "node scripts/fix-types.js"
     },
     "main": "./dist/orion-design.umd.js",
     "module": "./dist/orion-design.es.js",
@@ -33,6 +34,7 @@
         "@types/node": "^15.14.1",
         "@vitejs/plugin-vue": "^1.2.5",
         "date-fns": "^2.25.0",
+        "replace": "^1.2.1",
         "sass": "^1.35.2",
         "typescript": "^4.1.6",
         "vite": "^2.4.2",
