--- a/orion-ui/packages/orion-design/tsconfig.json
+++ b/orion-ui/packages/orion-design/tsconfig.json
@@ -1,7 +1,13 @@
 {
     "extends": "../../tsconfig.json",
     "include": [
-        "src/index.ts",
+        "src",
         "../../src/typings/index.d.ts"
-    ]
+    ],
+    "exclude": ["node_modules"],
+    "compilerOptions": {
+        "emitDeclarationOnly": true,
+        "outFile": "dist/index.d.ts",
+        "baseUrl": "."
+    }
 }
