Bundle everything in the components folder

--- a/orion-ui/packages/orion-design/tsconfig.json
+++ b/orion-ui/packages/orion-design/tsconfig.json
@@ -2,12 +2,11 @@
     "extends": "../../tsconfig.json",
     "include": [
         "src",
-        "../../src/typings/index.d.ts"
+        "../../src/typings"
     ],
     "exclude": ["node_modules"],
     "compilerOptions": {
         "emitDeclarationOnly": true,
         "outFile": "dist/index.d.ts",
-        "baseUrl": "."
     }
 }
