--- a/src/prefect/utilities/logging.yml
+++ b/src/prefect/utilities/logging.yml
@@ -12,33 +12,65 @@ disable_existing_loggers: False
 
 formatters:
     simple:
-        format: "%(asctime)s.%(msecs)03d | %(message)s"
+        format: "%(asctime)s.%(msecs)03d | %(name)s - %(message)s"
         datefmt: "%H:%M:%S"
 
+    standard:
+        format: "%(asctime)s.%(msecs)03d | %(levelname)-7s | %(name)s - %(message)s"
+        datefmt: "%H:%M:%S"
+
+    flows:
+        format: "%(asctime)s.%(msecs)03d | %(levelname)-7s | Flow %(flow_name)r - %(message)s"
+        datefmt: "%H:%M:%S"
+
+    tasks:
+        format: "%(asctime)s.%(msecs)03d | %(levelname)-7s | Task %(task_name)r - %(message)s"
+        datefmt: "%H:%M:%S" 
+
     flow_runs:
-        format: "%(asctime)s.%(msecs)03d | %(name)s: %(message)s"
+        format: "%(asctime)s.%(msecs)03d | %(levelname)-7s | Flow run %(flow_run_name)r - %(message)s"
         datefmt: "%H:%M:%S"
 
     task_runs:
-        format: "%(asctime)s.%(msecs)03d | %(name)s: %(message)s"
+        format: "%(asctime)s.%(msecs)03d | %(levelname)-7s | Task run %(task_run_name)r - %(message)s"
         datefmt: "%H:%M:%S"
+
+
+    #     datefmt: "%H:%M:%S"
+
+
+    # rich_simple:
+    #     format: "%(message)s"
 
     json:
         class: prefect.utilities.logging.JsonFormatter
+        format: "pretty"
 
 filters:
-    run_context:
-        # Injects run information into a log record
-        class: prefect.utilities.logging.RunContextInjector
+    exclude_engine_logs:
+        class: prefect.utilities.logging.exclude_engine_logs
 
-    # A user could define a custom filter that drops records containing
+    # Define any custom filters to drops records containing
     # sensitive information
+    # my_filter:
+        # class: your_module.FilterClass
+
 
 handlers:
     console:
         class: logging.StreamHandler
         level: "{{default_level}}"
-        formatter: simple
+        formatter: standard
+
+    console_flows:
+        class: logging.StreamHandler
+        level: "{{default_level}}"
+        formatter: flows
+
+    console_tasks:
+        class: logging.StreamHandler
+        level: "{{default_level}}"
+        formatter: tasks
 
     console_flow_runs:
         class: logging.StreamHandler
@@ -53,25 +85,34 @@ handlers:
     orion:
         class: prefect.utilities.logging.OrionHandler
         level: "{{default_level}}"
+        filters: [exclude_engine_logs]
         formatter: json
 
 loggers:
     prefect:
-        level: DEBUG
+        level: WARNING
         handlers: [console]
+        propagate: no
+
+    prefect.flows:
+        level: DEBUG
+        handlers: [console_flows]
+        propagate: no
+
+    prefect.tasks:
+        level: DEBUG
+        handlers: [console_tasks]
         propagate: no
 
     prefect.flow_runs:
         level: DEBUG
         handlers: [orion, console_flow_runs]
-        filters: [run_context]
-        propogate: no
-    
+        propagate: no
+
     prefect.task_runs:
         level: DEBUG
         handlers: [orion, console_task_runs]
-        filters: [run_context]
-        propogate: no
+        propagate: no
 
     root:
         level: INFO
