Add QueryParams helper class and DashboardFilters implementation
Just proof of concept work mostly. Will need to be actually implemented in the filters UI

--- a/orion-ui/packages/orion-design/package.json
+++ b/orion-ui/packages/orion-design/package.json
@@ -25,6 +25,7 @@
         "core-js": "^3.6.5",
         "d3": "^7.0.0",
         "vue": "^3.0.5",
+        "vue-router": "^4.0.12",
         "vuex": "^4.0.2"
     },
     "devDependencies": {
