--- a/orion-ui/package.json
+++ b/orion-ui/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@prefecthq/miter-design": "0.1.18",
+    "@prefecthq/orion-design": "file:./packages/orion-design",
     "@prefecthq/vue-compositions": "0.1.9",
     "core-js": "^3.6.5",
     "d3": "^7.0.0",
