Use @prefecthq/eslint-config for orion-design

--- a/orion-ui/packages/orion-design/package.json
+++ b/orion-ui/packages/orion-design/package.json
@@ -30,10 +30,12 @@
     "devDependencies": {
         "@babel/helper-compilation-targets": "^7.16.3",
         "@babel/runtime": "^7.16.3",
+        "@prefecthq/eslint-config": "^1.0.10",
         "@types/d3": "^7.0.0",
         "@types/node": "^15.14.1",
         "@vitejs/plugin-vue": "^1.2.5",
         "date-fns": "^2.25.0",
+        "eslint": "^8.6.0",
         "replace": "^1.2.1",
         "sass": "^1.35.2",
         "typescript": "^4.1.6",
