Feature/add mixpanel tasks (#5276)
* Update click requirement from <8.0,>=7.0 to >=7.0,<9.0

Updates the requirements on [click](https://github.com/pallets/click) to permit the latest version.
- [Release notes](https://github.com/pallets/click/releases)
- [Changelog](https://github.com/pallets/click/blob/main/CHANGES.rst)
- [Commits](https://github.com/pallets/click/compare/7.0...8.0.3)

---
updated-dependencies:
- dependency-name: click
  dependency-type: direct:production
...

Signed-off-by: dependabot[bot] <support@github.com>

* Update mypy requirement from <0.813,>=0.600 to >=0.600,<0.911

Updates the requirements on [mypy](https://github.com/python/mypy) to permit the latest version.
- [Release notes](https://github.com/python/mypy/releases)
- [Commits](https://github.com/python/mypy/compare/v0.600...v0.910)

---
updated-dependencies:
- dependency-name: mypy
  dependency-type: direct:development
...

Signed-off-by: dependabot[bot] <support@github.com>

* Added tests for Mixpanel tasks

* Added handling of Mixpanel error response

* Small improvements

* Added change file and updated outline

* Fixed typo in change file

* Fixed quotes in outline.toml

* Added group_events option

* Update mypy requirement from <0.911,>=0.600 to >=0.600,<0.931

Updates the requirements on [mypy](https://github.com/python/mypy) to permit the latest version.
- [Release notes](https://github.com/python/mypy/releases)
- [Commits](https://github.com/python/mypy/compare/v0.600...v0.930)

---
updated-dependencies:
- dependency-name: mypy
  dependency-type: direct:development
...

Signed-off-by: dependabot[bot] <support@github.com>

* Refactored Mixpanel tasks __init__.py

* Small refactor of import statement

* Update src/prefect/tasks/mixpanel/__init__.py

Co-authored-by: Terrence Dorsey <terrend@mishu.com>

* Update src/prefect/tasks/mixpanel/mixpanel_tasks.py

Co-authored-by: Terrence Dorsey <terrend@mishu.com>

*

--- a/docs/outline.toml
+++ b/docs/outline.toml
@@ -571,6 +571,11 @@ title = "SodaSpark Tasks"
 module = "prefect.tasks.sodaspark"
 classes = ["SodaSparkScan"]
 
+[pages.tasks.mixpanel]
+title = "Mixpanel Tasks"
+module = "prefect.tasks.mixpanel"
+classes = ["MixpanelExportTask"]
+
 [pages.tasks.databricks]
 title = "Databricks Tasks"
 module = "prefect.tasks.databricks"
