--- a/orion-ui/packages/orion-design/package.json
+++ b/orion-ui/packages/orion-design/package.json
@@ -30,7 +30,7 @@
     "devDependencies": {
         "@babel/helper-compilation-targets": "^7.16.3",
         "@babel/runtime": "^7.16.3",
-        "@prefecthq/eslint-config": "^1.0.10",
+        "@prefecthq/eslint-config": "1.0.11",
         "@types/d3": "^7.0.0",
         "@types/node": "^15.14.1",
         "@vitejs/plugin-vue": "^1.2.5",
