Adding Monte Carlo lineage tasks (#5256)
* monte_carlo_tasks initial version

* Update outline.toml

* changes yaml, black

* fix based on failed tests

* Update monte_carlo_lineage.py

* fixing broken API reference docs

* flake8

* Update monte_carlo_lineage.py

* black

* kwargs unnecessary in run()

* logo

* Apply suggestions from Terry's review

Co-authored-by: Terrence Dorsey <terrend@mishu.com>

* flake8

* verified badge

* more tests

* review changes

* adding possibility to add multiple tags in a single API call

+ changing Prefect context values to be sent as separate tags
+ fixing the docstrings
+ fixing tests

* fixing docs rendering + cleanup

* combining the tags to make a single API call

Co-authored-by: Anna Geller <anna.m.geller@gmail.com>
Co-authored-by: Terrence Dorsey <terrend@mishu.com>
Co-authored-by: Michael Adkins <madkinszane@gmail.com>

--- a/docs/outline.toml
+++ b/docs/outline.toml
@@ -776,6 +776,12 @@ module = "prefect.tasks.airbyte"
 classes = ["AirbyteConnectionTask"]
 verified_task = true
 
+[pages.tasks.monte_carlo]
+title = "Monte Carlo Tasks"
+module = "prefect.tasks.monte_carlo"
+classes = ["MonteCarloCreateOrUpdateLineage", "MonteCarloCreateOrUpdateNodeWithTags", "MonteCarloGetResources"]
+verified_task = true
+
 [pages.tasks.zendesk]
 title = "Zendesk Tasks"
 module = "prefect.tasks.zendesk"
