Add a dev watch task to orion-design
Not quite working correctly but better than manually building each time

--- a/orion-ui/packages/orion-design/package.json
+++ b/orion-ui/packages/orion-design/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
+        "dev": "vite build --watch",
         "build": "vite build & vue-tsc",
         "postbuild": "node scripts/fix-types.js"
     },
