Only retain python test docker images for 1 day
The default retention of 90 days is expensive if we build 3 images for every PR commit

--- a/.github/workflows/python_tests.yaml
+++ b/.github/workflows/python_tests.yaml
@@ -43,6 +43,7 @@ jobs:
         with:
           name: image-${{ github.sha }}-${{ matrix.python-version }}
           path: /tmp/image.tar
+          retention-days: 1
 
   run-tests-sqlite:
     name: Test with SQLite
