--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -9,3 +9,9 @@
 
 # documentation
 /docs                               @tpdorsey
+
+# orchestration rules / policies
+src/prefect/orion/orchestration     @anticorrelator
+
+# database configuration / models
+src/prefect/orion/database          @anticorrelator
