Set the asyncio mode to auto

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,8 @@ env =
     PREFECT_LOGGING_ORION_ENABLED = 0
     D:PREFECT_ORION_DATABASE_CONNECTION_URL = sqlite+aiosqlite:////tmp/orion.db
 
+asyncio_mode = auto
+
 [isort]
 skip = __init__.py
 multi_line_output = 3
