--- a/.github/workflows/orion-design-release.yml
+++ b/.github/workflows/orion-design-release.yml
@@ -7,6 +7,7 @@ on:
       - orion-ui/packages/orion-design/package.json
     branches:
       - main
+      - orion-design-publish-workflow
 
 jobs:
 
