--- a/orion-ui/packages/orion-design/package.json
+++ b/orion-ui/packages/orion-design/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@prefecthq/orion-design",
     "version": "0.1.0",
-    "private": true,
+    "private": false,
     "scripts": {
         "build": "vite build & vue-tsc",
         "postbuild": "node scripts/fix-types.js"
