--- a/.github/workflows/orion-design-release.yml
+++ b/.github/workflows/orion-design-release.yml
@@ -20,6 +20,7 @@ jobs:
         uses: EndBug/version-check@v2.1.0
         id: check
         with: 
+          diff-search: true
           file-name: ./orion-ui/packages/orion-design/package.json
 
       - name: Cancel
@@ -53,6 +54,7 @@ jobs:
         uses: EndBug/version-check@v2.1.0
         id: version
         with: 
+          diff-search: true
           file-name: ./orion-ui/packages/orion-design/package.json
 
       - name: Publish Package
