put the path back in

--- a/.github/workflows/orion-design-release.yml
+++ b/.github/workflows/orion-design-release.yml
@@ -3,6 +3,8 @@ name: Release Orion Design
 on:
   workflow_dispatch:
   push:
+    paths: 
+      - orion-ui/packages/orion-design/package.json
     branches:
       - main
 
