--- a/orion-ui/packages/orion-design/package.json
+++ b/orion-ui/packages/orion-design/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "@prefecthq/miter-design": "0.1.19",
         "@prefecthq/vue-compositions": "0.1.9",
+        "axios": "^0.24.0",
         "core-js": "^3.6.5",
         "d3": "^7.0.0",
         "vue": "^3.0.5",
