Add persist-credentials: false for the check version job

--- a/.github/workflows/orion-design-release.yml
+++ b/.github/workflows/orion-design-release.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps: 
       - uses: actions/checkout@v2
+        width: 
+          persist-credentials: false
 
       - name: Check Package Version
         uses: EndBug/version-check@v2.1.0
