--- a/orion-ui/packages/orion-design/package.json
+++ b/orion-ui/packages/orion-design/package.json
@@ -2,6 +2,9 @@
     "name": "@prefecthq/orion-design",
     "version": "0.1.1",
     "private": false,
+    "keywords": [
+        "prefect"
+    ],
     "scripts": {
         "build": "vite build & vue-tsc",
         "postbuild": "node scripts/fix-types.js"
