--- a/.github/workflows/orion-design-release.yml
+++ b/.github/workflows/orion-design-release.yml
@@ -52,6 +52,10 @@ jobs:
       - name: Install dependencies
         working-directory: ./orion-ui/packages/orion-design
         run: npm ci install
+      
+      - name: Build project
+        working-directory: ./orion-ui/packages/orion-design
+        run: npm run build
 
       - name: Get Package Version
         uses: EndBug/version-check@v2.1.0
