Install orion-ui's packages before building orion-design
Necessary because we're importing components from orion-ui into orion-design temporarily

--- a/.github/workflows/orion-design-release.yml
+++ b/.github/workflows/orion-design-release.yml
@@ -49,7 +49,11 @@ jobs:
         with:
           node-version: "${{ steps.nvm.outputs.NVMRC }}"
       
-      - name: Install dependencies
+      - name: Install orion-ui dependencies
+        working-directory: ./orion-ui
+        run: npm ci install
+      
+      - name: Install orion-design dependencies
         working-directory: ./orion-ui/packages/orion-design
         run: npm ci install
       
