Revert "Run the workflow againi"
This reverts commit 0d52e9dbc94c5f7b30315d3c5b7f5d34739fa7f6.

--- a/.github/workflows/orion-design-release.yml
+++ b/.github/workflows/orion-design-release.yml
@@ -3,9 +3,10 @@ name: Release Orion Design
 on:
   workflow_dispatch:
   push:
+    paths: 
+      - orion-ui/packages/orion-design/package.json
     branches:
       - main
-      - orion-design-re-release-0-1-3
 
 jobs:
 
