Trigger the workflow again

--- a/orion-ui/packages/orion-design/package.json
+++ b/orion-ui/packages/orion-design/package.json
@@ -4,7 +4,8 @@
     "private": false,
     "keywords": [
         "prefect",
-        "vue3"
+        "vue3",
+        "orion"
     ],
     "scripts": {
         "dev": "vite build --watch",
