--- a/src/prefect/logging/logging.yml
+++ b/src/prefect/logging/logging.yml
@@ -61,6 +61,11 @@ handlers:
 loggers:
     prefect:
         level: DEBUG
+        handlers: [console]
+        propagate: no
+
+    prefect.extra:
+        level: DEBUG
         handlers: [orion, console]
         propagate: no
 
