--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -205,6 +205,9 @@ jobs:
             --title "Publish code from Orion release ${GITHUB_REF#refs/*/}" \
             --body '_automatically created with `gh` cli on merge to `main`_' \
             --base orion --repo prefecthq/prefect
+        env:
+          GITHUB_TOKEN: ${{ secrets.OS_GITHUB_TOKEN }}
+          MARVIN_GITHUB_TOKEN: ${{ secrets.OS_GITHUB_TOKEN }}
 
   publish-release:
     name: Publish release to PyPI
