Remove dependency for a successful release from `publish-docker-images`
Previously, we needed to approve the "prod" workflow twice. Once for PyPI and again for Docker image publishing. This should require a single approval instead.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -231,7 +231,7 @@ jobs:
 
   publish-docker-images:
     name: Publish Docker images
-    needs: [publish-release, build-docker-images]
+    needs: [build-docker-images, build-release, publish-test-release]
     environment: 'prod'
 
     runs-on: ubuntu-latest
