add commands to cli

--- a/src/prefect/orion/database/alembic.ini
+++ b/src/prefect/orion/database/alembic.ini
@@ -1,7 +1,6 @@
 # A generic, single database configuration.
 [alembic]
-
-script_location = prefect:orion:alembic
+script_location = prefect:orion:database:migrations
 
 # template used to generate migration files
 # file_template = %%(rev)s_%%(slug)s
@@ -37,14 +36,12 @@ prepend_sys_path = .
 # The path separator used here should be the separator specified by "version_path_separator"
 ; version_locations = %(here)s/bar:%(here)s/bat:alembic/versions
 
-;version_locations = %(here)s/src/prefect/orion/alembic/postgresql_versions
-
 # version path separator; As mentioned above, this is the character used to split
 # version_locations. Valid values are:
-version_path_separator = :
+;version_path_separator = :
 # version_path_separator = ;
 # version_path_separator = space
-;version_path_separator = os
+version_path_separator = os
 # default: use os.pathsep
 
 # the output encoding used when revision files
