--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -407,6 +407,7 @@ jobs:
           command: |
             docker login --username  $DOCKER_HUB_USER --password $DOCKER_HUB_PW
             docker push prefecthq/prefect:master
+            
   build_core_docker_image:
     docker:
       - image: docker
@@ -595,3 +596,43 @@ workflows:
               ignore: /.*/
             tags:
               only: /^[0-9]+\.[0-9]+\.[0-9]+$/
+
+      # RC -----
+
+      - build_docker_image:
+          python_version: '3.7'
+          extras: 'all_orchestration_extras'
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^1.0rc[0-9]$/
+      - build_docker_image:
+          python_version: '3.8'
+          extras: 'all_orchestration_extras'
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^1.0rc[0-9]$/
+      - build_docker_image:
+          python_version: '3.9'
+          extras: 'all_orchestration_extras'
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^1.0rc[0-9]$/
+      - release_to_pypi:
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^1.0rc[0-9]$/
+      - build_core_docker_image:
+          python_version: '3.9'
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^1.0rc[0-9]$/
