--- a/orion-ui/package.json
+++ b/orion-ui/package.json
@@ -12,8 +12,8 @@
     "lint": "eslint src --ext .js,.ts,.vue"
   },
   "dependencies": {
-    "@prefecthq/miter-design": "0.1.15",
-    "@prefecthq/orion-design": "file:packages/orion-design",
+    "@prefecthq/miter-design": "0.1.20",
+    "@prefecthq/orion-design": "0.1.4",
     "@prefecthq/vue-compositions": "0.1.9",
     "core-js": "^3.6.5",
     "d3": "^7.0.0",
