--- a/orion-ui/packages/orion-design/package.json
+++ b/orion-ui/packages/orion-design/package.json
@@ -9,7 +9,11 @@
     ],
     "scripts": {
         "dev": "vite build --watch",
-        "build": "vite build & vue-tsc",
+        "build": "vue-tsc & vite build & npm run build-components & npm run build-models & npm run build-services & npm run build-utilities",
+        "build-components": "vite build --mode components",
+        "build-models": "vite build --mode models",
+        "build-services": "vite build --mode services",
+        "build-utilities": "vite build --mode utilities",
         "postbuild": "node scripts/fix-types.js"
     },
     "main": "./dist/orion-design.umd.js",
@@ -18,6 +22,22 @@
         ".": {
             "import": "./dist/orion-design.es.js",
             "require": "./dist/orion-design.umd.js"
+        },
+        "./components":{
+            "import": "./dist/orion-design-services.es.js",
+            "require": "./dist/orion-design-services.umd.js"
+        },
+        "./models":{
+            "import": "./dist/orion-design-services.es.js",
+            "require": "./dist/orion-design-services.umd.js"
+        },
+        "./services":{
+            "import": "./dist/orion-design-services.es.js",
+            "require": "./dist/orion-design-services.umd.js"
+        },
+        "./utilities":{
+            "import": "./dist/orion-design-services.es.js",
+            "require": "./dist/orion-design-services.umd.js"
         },
         "./dist/style.css": "./dist/style.css"
     },
